--- a/configs/st_stm32mp157d_dk1_demo_defconfig
+++ b/configs/st_stm32mp157d_dk1_demo_defconfig
@@ -1,7 +1,8 @@
 BR2_arm=y
 BR2_cortex_a7=y
-BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 BR2_TOOLCHAIN_EXTERNAL=y
+BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
+BR2_TARGET_GENERIC_ROOT_PASSWD="root"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/stm32mp1/mp157-overlay/ $(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/stm32mp1/boot-overlay/"
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/stm32mp1/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/stm32mp1/post-image.sh"
@@ -30,6 +31,7 @@ BR2_PACKAGE_GCNANO_BINARIES=y
 BR2_PACKAGE_LIBDRM_INSTALL_TESTS=y
 BR2_PACKAGE_OPTEE_EXAMPLES=y
 BR2_PACKAGE_OPTEE_TEST=y
+BR2_PACKAGE_DROPBEAR=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="200M"
