configs/st: switch to LinuxFB for Qt5 on STM32MP135F
As the STM32MP135F does not have a GPU, we cannot enable OpenGL, so
let's use the LinuxFB backend of Qt5 instead.

Signed-off-by: Thomas Petazzoni <thomas.petazzoni@bootlin.com>

--- a/configs/st_stm32mp135f_dk_demo_defconfig
+++ b/configs/st_stm32mp135f_dk_demo_defconfig
@@ -22,14 +22,13 @@ BR2_PACKAGE_DEJAVU=y
 BR2_PACKAGE_QT5=y
 BR2_PACKAGE_QT5BASE_EXAMPLES=y
 BR2_PACKAGE_QT5BASE_GUI=y
-BR2_PACKAGE_QT5BASE_OPENGL_LIB=y
-BR2_PACKAGE_QT5BASE_EGLFS=y
+BR2_PACKAGE_QT5BASE_WIDGETS=y
 BR2_PACKAGE_QT5BASE_FONTCONFIG=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_BRCM_BCM43XXX=y
 BR2_PACKAGE_MURATA_CYW_FW=y
 BR2_PACKAGE_MURATA_CYW_FW_CYW43430=y
-BR2_PACKAGE_GCNANO_BINARIES=y
+BR2_PACKAGE_LIBDRM=y
 BR2_PACKAGE_LIBDRM_INSTALL_TESTS=y
 BR2_PACKAGE_OPTEE_EXAMPLES=y
 BR2_PACKAGE_OPTEE_TEST=y
