configs: enable BR2_TARGET_UBOOT_NEEDS_PYLIBFDT
The U-Boot build of STM32MP configurations need SWIG on the host, so
enable BR2_TARGET_UBOOT_NEEDS_PYLIBFDT to make sure it gets built
before U-Boot.

Signed-off-by: Thomas Petazzoni <thomas.petazzoni@bootlin.com>

--- a/configs/st_stm32mp157a_dk1_demo_defconfig
+++ b/configs/st_stm32mp157a_dk1_demo_defconfig
@@ -62,6 +62,7 @@ BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_TARBALL=y
 BR2_TARGET_UBOOT_CUSTOM_TARBALL_LOCATION="$(call github,STMicroelectronics,u-boot)v2021.10-stm32mp-r1.tar.gz"
 BR2_TARGET_UBOOT_BOARD_DEFCONFIG="stm32mp15"
+BR2_TARGET_UBOOT_NEEDS_PYLIBFDT=y
 # BR2_TARGET_UBOOT_FORMAT_BIN is not set
 BR2_TARGET_UBOOT_FORMAT_CUSTOM=y
 BR2_TARGET_UBOOT_FORMAT_CUSTOM_NAME="u-boot-nodtb.bin u-boot.dtb"
