--- a/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp157f-dk2-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp157f-dk2-mx.dts
@@ -23,8 +23,8 @@
 /* USER CODE END includes */
 
 / {
-	model = "STMicroelectronics STM32MP157F-DK2 STM32CubeMX board - openstlinux-5.15-yocto-kirkstone-mp1-v22.06.15";
-	compatible = "st,stm32mp157f-mx", "st,stm32mp157";
+	model = "STMicroelectronics STM32MP157F-DK2 STM32CubeMX board - openstlinux-5.15-yocto-kirkstone-mp1-v22.11.23";
+	compatible = "st,stm32mp157f-dk2-mx", "st,stm32mp157";
 
 	memory@c0000000 {
 		device_type = "memory";
@@ -148,9 +148,9 @@
 	/* USER CODE END root */
 
 	clocks {
+
 		/* USER CODE BEGIN clocks */
 		/* USER CODE END clocks */
-
 	};
 
 }; /*root*/
@@ -527,15 +527,31 @@
 	vref-supply = <&vrefbuf>;
 
 	adc1:adc@0{
-		st,min-sample-time-nsecs = <5000>;
-		st,adc-channels = <18 19>;
 		status = "okay";
+
+		channel@18{
+			reg = <18>;
+			st,min-sample-time-ns = <5000>;
+		};
+
+		channel@19{
+			reg = <19>;
+			st,min-sample-time-ns = <5000>;
+		};
 	};
 
 	adc2:adc@100{
-		st,adc-channels = <18 19>;
-		st,min-sample-time-nsecs = <5000>;
 		status = "okay";
+
+		channel@18{
+			reg = <18>;
+			st,min-sample-time-ns = <5000>;
+		};
+
+		channel@19{
+			reg = <19>;
+			st,min-sample-time-ns = <5000>;
+		};
 	};
 	/* USER CODE END adc */
 };
@@ -827,7 +843,7 @@
 	pmic:stpmic@33{
 		compatible = "st,stpmic1";
 		reg = <0x33>;
-		interrupts-extended = <&exti_pwr 55 IRQ_TYPE_EDGE_FALLING>;
+		interrupts-extended = <&exti 55 IRQ_TYPE_EDGE_FALLING>;
 		interrupt-controller;
 		#interrupt-cells = <2>;
 		status = "okay";
@@ -1137,7 +1153,6 @@
 	status = "okay";
 
 	/* USER CODE BEGIN sdmmc2 */
-	arm,primecell-periphid = <0x10153180>;
 	non-removable;
 	st,neg-edge;
 	bus-width = <4>;
