--- a/board/stmicroelectronics/stm32mp1/linux-dts/stm32mp157c-dk2-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/linux-dts/stm32mp157c-dk2-mx.dts
@@ -23,8 +23,8 @@
 /* USER CODE END includes */
 
 / {
-	model = "STMicroelectronics STM32MP157C-DK2 STM32CubeMX board - openstlinux-5.15-yocto-kirkstone-mp1-v22.06.15";
-	compatible = "st,stm32mp157c-mx", "st,stm32mp157";
+	model = "STMicroelectronics STM32MP157C-DK2 STM32CubeMX board - openstlinux-5.15-yocto-kirkstone-mp1-v22.11.23";
+	compatible = "st,stm32mp157c-dk2-mx", "st,stm32mp157";
 
 	memory@c0000000 {
 		device_type = "memory";
@@ -148,9 +148,9 @@
 	/* USER CODE END root */
 
 	clocks {
+
 		/* USER CODE BEGIN clocks */
 		/* USER CODE END clocks */
-
 	};
 
 }; /*root*/
@@ -474,74 +474,6 @@
 	};
 
 	/* USER CODE BEGIN pinctrl */
-	ltdc_pins_a: ltdc-0 {
-		pins {
-			pinmux = <STM32_PINMUX('G',  7, AF14)>, /* LCD_CLK */
-				 <STM32_PINMUX('I', 10, AF14)>, /* LCD_HSYNC */
-				 <STM32_PINMUX('I',  9, AF14)>, /* LCD_VSYNC */
-				 <STM32_PINMUX('F', 10, AF14)>, /* LCD_DE */
-				 <STM32_PINMUX('H',  2, AF14)>, /* LCD_R0 */
-				 <STM32_PINMUX('H',  3, AF14)>, /* LCD_R1 */
-				 <STM32_PINMUX('H',  8, AF14)>, /* LCD_R2 */
-				 <STM32_PINMUX('H',  9, AF14)>, /* LCD_R3 */
-				 <STM32_PINMUX('H', 10, AF14)>, /* LCD_R4 */
-				 <STM32_PINMUX('C',  0, AF14)>, /* LCD_R5 */
-				 <STM32_PINMUX('H', 12, AF14)>, /* LCD_R6 */
-				 <STM32_PINMUX('E', 15, AF14)>, /* LCD_R7 */
-				 <STM32_PINMUX('E',  5, AF14)>, /* LCD_G0 */
-				 <STM32_PINMUX('E',  6, AF14)>, /* LCD_G1 */
-				 <STM32_PINMUX('H', 13, AF14)>, /* LCD_G2 */
-				 <STM32_PINMUX('H', 14, AF14)>, /* LCD_G3 */
-				 <STM32_PINMUX('H', 15, AF14)>, /* LCD_G4 */
-				 <STM32_PINMUX('I',  0, AF14)>, /* LCD_G5 */
-				 <STM32_PINMUX('I',  1, AF14)>, /* LCD_G6 */
-				 <STM32_PINMUX('I',  2, AF14)>, /* LCD_G7 */
-				 <STM32_PINMUX('D',  9, AF14)>, /* LCD_B0 */
-				 <STM32_PINMUX('G', 12, AF14)>, /* LCD_B1 */
-				 <STM32_PINMUX('G', 10, AF14)>, /* LCD_B2 */
-				 <STM32_PINMUX('D', 10, AF14)>, /* LCD_B3 */
-				 <STM32_PINMUX('I',  4, AF14)>, /* LCD_B4 */
-				 <STM32_PINMUX('A',  3, AF14)>, /* LCD_B5 */
-				 <STM32_PINMUX('B',  8, AF14)>, /* LCD_B6 */
-				 <STM32_PINMUX('D',  8, AF14)>; /* LCD_B7 */
-			bias-disable;
-			drive-push-pull;
-			slew-rate = <1>;
-		};
-	};
-
-	ltdc_sleep_pins_a: ltdc-sleep-0 {
-		pins {
-			pinmux = <STM32_PINMUX('G',  7, ANALOG)>, /* LCD_CLK */
-				 <STM32_PINMUX('I', 10, ANALOG)>, /* LCD_HSYNC */
-				 <STM32_PINMUX('I',  9, ANALOG)>, /* LCD_VSYNC */
-				 <STM32_PINMUX('F', 10, ANALOG)>, /* LCD_DE */
-				 <STM32_PINMUX('H',  2, ANALOG)>, /* LCD_R0 */
-				 <STM32_PINMUX('H',  3, ANALOG)>, /* LCD_R1 */
-				 <STM32_PINMUX('H',  8, ANALOG)>, /* LCD_R2 */
-				 <STM32_PINMUX('H',  9, ANALOG)>, /* LCD_R3 */
-				 <STM32_PINMUX('H', 10, ANALOG)>, /* LCD_R4 */
-				 <STM32_PINMUX('C',  0, ANALOG)>, /* LCD_R5 */
-				 <STM32_PINMUX('H', 12, ANALOG)>, /* LCD_R6 */
-				 <STM32_PINMUX('E', 15, ANALOG)>, /* LCD_R7 */
-				 <STM32_PINMUX('E',  5, ANALOG)>, /* LCD_G0 */
-				 <STM32_PINMUX('E',  6, ANALOG)>, /* LCD_G1 */
-				 <STM32_PINMUX('H', 13, ANALOG)>, /* LCD_G2 */
-				 <STM32_PINMUX('H', 14, ANALOG)>, /* LCD_G3 */
-				 <STM32_PINMUX('H', 15, ANALOG)>, /* LCD_G4 */
-				 <STM32_PINMUX('I',  0, ANALOG)>, /* LCD_G5 */
-				 <STM32_PINMUX('I',  1, ANALOG)>, /* LCD_G6 */
-				 <STM32_PINMUX('I',  2, ANALOG)>, /* LCD_G7 */
-				 <STM32_PINMUX('D',  9, ANALOG)>, /* LCD_B0 */
-				 <STM32_PINMUX('G', 12, ANALOG)>, /* LCD_B1 */
-				 <STM32_PINMUX('G', 10, ANALOG)>, /* LCD_B2 */
-				 <STM32_PINMUX('D', 10, ANALOG)>, /* LCD_B3 */
-				 <STM32_PINMUX('I',  4, ANALOG)>, /* LCD_B4 */
-				 <STM32_PINMUX('A',  3, ANALOG)>, /* LCD_B5 */
-				 <STM32_PINMUX('B',  8, ANALOG)>, /* LCD_B6 */
-				 <STM32_PINMUX('D',  8, ANALOG)>; /* LCD_B7 */
-		};
-	};
 	/* USER CODE END pinctrl */
 };
 
@@ -595,15 +527,31 @@
 	vref-supply = <&vrefbuf>;
 
 	adc1:adc@0{
-		st,min-sample-time-nsecs = <5000>;
-		st,adc-channels = <18 19>;
 		status = "okay";
+
+		channel@18{
+			reg = <18>;
+			st,min-sample-time-ns = <5000>;
+		};
+
+		channel@19{
+			reg = <19>;
+			st,min-sample-time-ns = <5000>;
+		};
 	};
 
 	adc2:adc@100{
-		st,adc-channels = <18 19>;
-		st,min-sample-time-nsecs = <5000>;
 		status = "okay";
+
+		channel@18{
+			reg = <18>;
+			st,min-sample-time-ns = <5000>;
+		};
+
+		channel@19{
+			reg = <19>;
+			st,min-sample-time-ns = <5000>;
+		};
 	};
 	/* USER CODE END adc */
 };
@@ -895,7 +843,7 @@
 	pmic:stpmic@33{
 		compatible = "st,stpmic1";
 		reg = <0x33>;
-		interrupts-extended = <&exti_pwr 55 IRQ_TYPE_EDGE_FALLING>;
+		interrupts-extended = <&exti 55 IRQ_TYPE_EDGE_FALLING>;
 		interrupt-controller;
 		#interrupt-cells = <2>;
 		status = "okay";
@@ -1077,9 +1025,6 @@
 	status = "okay";
 
 	/* USER CODE BEGIN ltdc */
-	pinctrl-names = "default", "sleep";
-	pinctrl-0 = <&ltdc_pins_a>;
-	pinctrl-1 = <&ltdc_sleep_pins_a>;
 
 	port{
 
@@ -1208,7 +1153,6 @@
 	status = "okay";
 
 	/* USER CODE BEGIN sdmmc2 */
-	arm,primecell-periphid = <0x10153180>;
 	non-removable;
 	st,neg-edge;
 	bus-width = <4>;
