--- a/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp157f-dk2-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp157f-dk2-mx.dts
@@ -24,8 +24,8 @@
 /* USER CODE END includes */
 
 / {
-	model = "STMicroelectronics STM32MP157F-DK2 STM32CubeMX board - openstlinux-5.15-yocto-kirkstone-mp1-v22.06.15";
-	compatible = "st,stm32mp157f-mx", "st,stm32mp157";
+	model = "STMicroelectronics STM32MP157F-DK2 STM32CubeMX board - openstlinux-5.15-yocto-kirkstone-mp1-v22.11.23";
+	compatible = "st,stm32mp157f-dk2-mx", "st,stm32mp157";
 
 	memory@c0000000 {
 		device_type = "memory";
@@ -61,14 +61,21 @@
 		/* USER CODE BEGIN clocks */
 		/* USER CODE END clocks */
 
+		clk_hsi: clk-hsi {
+			clock-frequency = <64000000>;
+
+			/* USER CODE BEGIN clk_hsi */
+			/* USER CODE END clk_hsi */
+		};
 		clk_lse: clk-lse {
+			clock-frequency = <32768>;
 			st,drive = < LSEDRV_MEDIUM_HIGH >;
 
 			/* USER CODE BEGIN clk_lse */
 			/* USER CODE END clk_lse */
 		};
-
 		clk_hse: clk-hse {
+			clock-frequency = <24000000>;
 			st,digbypass;
 
 			/* USER CODE BEGIN clk_hse */
@@ -606,6 +613,8 @@
 	status = "okay";
 
 	/* USER CODE BEGIN timers15 */
+	st,hsi-cal-input = <7>;
+	st,csi-cal-input = <8>;
 	/* USER CODE END timers15 */
 };
 
@@ -659,12 +668,6 @@
 
 &cpu1{
 	cpu-supply = <&vddcore>;
-};
-
-&timers15{
-	status = "okay";
-	st,hsi-cal-input = <7>;
-	st,csi-cal-input = <8>;
 };
 /* USER CODE END addons */
 
