--- a/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp157d-dk1-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp157d-dk1-mx.dts
@@ -22,8 +22,8 @@
 /* USER CODE END includes */
 
 / {
-	model = "STMicroelectronics STM32MP157D-DK1 STM32CubeMX board - openstlinux-5.15-yocto-kirkstone-mp1-v22.06.15";
-	compatible = "st,stm32mp157d-mx", "st,stm32mp157";
+	model = "STMicroelectronics STM32MP157D-DK1 STM32CubeMX board - openstlinux-5.15-yocto-kirkstone-mp1-v22.11.23";
+	compatible = "st,stm32mp157d-dk1-mx", "st,stm32mp157";
 
 	memory@c0000000 {
 		device_type = "memory";
@@ -138,9 +138,9 @@
 	/* USER CODE END root */
 
 	clocks {
+
 		/* USER CODE BEGIN clocks */
 		/* USER CODE END clocks */
-
 	};
 
 }; /*root*/
@@ -496,15 +496,31 @@
 	vref-supply = <&vrefbuf>;
 
 	adc1:adc@0{
-		st,min-sample-time-nsecs = <5000>;
-		st,adc-channels = <18 19>;
 		status = "okay";
+
+		channel@18{
+			reg = <18>;
+			st,min-sample-time-ns = <5000>;
+		};
+
+		channel@19{
+			reg = <19>;
+			st,min-sample-time-ns = <5000>;
+		};
 	};
 
 	adc2:adc@100{
-		st,adc-channels = <18 19>;
-		st,min-sample-time-nsecs = <5000>;
 		status = "okay";
+
+		channel@18{
+			reg = <18>;
+			st,min-sample-time-ns = <5000>;
+		};
+
+		channel@19{
+			reg = <19>;
+			st,min-sample-time-ns = <5000>;
+		};
 	};
 	/* USER CODE END adc */
 };
@@ -734,7 +750,7 @@
 	pmic:stpmic@33{
 		compatible = "st,stpmic1";
 		reg = <0x33>;
-		interrupts-extended = <&exti_pwr 55 IRQ_TYPE_EDGE_FALLING>;
+		interrupts-extended = <&exti 55 IRQ_TYPE_EDGE_FALLING>;
 		interrupt-controller;
 		#interrupt-cells = <2>;
 		status = "okay";
