board/st/devicetree: updated compatible with the right board name
U-boot from ST is parsing the compatible string. Not using the
the device kits real name can cause features to not function correctly.
For example it won't reach stm32mp13x_dk_fdt_update or
stm32mp15x_dk2_fdt_update uboot function.
Did the same for TF-A and Linux as it may cause similar issues.

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/board/stmicroelectronics/stm32mp1/linux-dts/stm32mp157c-dk2-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/linux-dts/stm32mp157c-dk2-mx.dts
@@ -24,7 +24,7 @@
 
 / {
 	model = "STMicroelectronics STM32MP157C-DK2 STM32CubeMX board - openstlinux-5.15-yocto-kirkstone-mp1-v22.11.23";
-	compatible = "st,stm32mp157c-dk2-mx", "st,stm32mp157";
+	compatible = "st,stm32mp157c-dk2", "st,stm32mp157";
 
 	memory@c0000000 {
 		device_type = "memory";
