--- a/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp157f-dk2-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/tfa-dts/stm32mp157f-dk2-mx.dts
@@ -25,7 +25,7 @@
 
 / {
 	model = "STMicroelectronics STM32MP157F-DK2 STM32CubeMX board - openstlinux-5.15-yocto-kirkstone-mp1-v22.11.23";
-	compatible = "st,stm32mp157f-dk2-mx", "st,stm32mp157";
+	compatible = "st,stm32mp157f-dk2", "st,stm32mp157";
 
 	memory@c0000000 {
 		device_type = "memory";
