--- a/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp135f-dk-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp135f-dk-mx.dts
@@ -23,7 +23,7 @@
 
 / {
 	model = "STMicroelectronics STM32MP135F-DK STM32CubeMX board - openstlinux-5.15-yocto-kirkstone-mp1-v22.11.23";
-	compatible = "st,stm32mp135f-dk-mx", "st,stm32mp135";
+	compatible = "st,stm32mp135f-dk", "st,stm32mp135";
 
 	memory@c0000000 {
 		device_type = "memory";
